Fix repeating overflow in edit mode and fix char checks

--- a/Call_of_Cthulhu_7th_Ed/coc_7th_ed.css
+++ b/Call_of_Cthulhu_7th_Ed/coc_7th_ed.css
@@ -9,6 +9,15 @@ select {
     padding: 0;
 }
 
+/* Tweak repeating section buttons so they have a bottom margin and dont overflow when in edit mode. */
+div[class^="repcontrol"] {
+  margin-bottom: 5px;
+}
+div[class="repcontainer editmode"] ~ div[class^="repcontrol"] button[class="btn repcontrol_add"] {
+  display: inline-block!important;
+  visibility: hidden;
+}
+
 h4.sheet-section-head {
     background-color: black;
     color: white;
